// Copyright 2020 Google LLC. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gnostic.metrics.v1;

// The Go package name.
option go_package = "./metrics;gnostic_metrics_v1";

// The complexity metric includes measurements of the complexity of an API.
message Complexity {

  // Operation statistics.
  int32 path_count = 1;
  int32 get_count = 2;
  int32 post_count = 3;
  int32 put_count = 4;
  int32 delete_count = 5;

  // Model statistics.
  int32 schema_count = 6;
  int32 schema_property_count = 7;
}
